styles.css
/* ... */
@media (max-width: 768px) {

  footer {
    max-width: 768px;
  }

  h1 {
    font-size: 30px;
    text-align: center;
  }

  h2 {
    text-align: center;
  }

  .container {
    width: 100%;
    max-width: 768px;
    margin: 0 auto;
    padding: 48px 32px;
  }

  .row {
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    gap: 8px;
  }

  #landing .container {
    margin-top: 56px;
  }

  #landing {
    width: 100%;
    padding: 0 32px;
  }

  .nav__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  footer .row {
    text-align: left;
  }

  #steps .row,
  #pricing .row,
  #testimonials .row,
  .list__plans,
  .step,
  .service,
  .values__list,
  .value,
  .start__row,
  .footer__bottom,
  header .row,
  .header__email,
  footer .row {
    flex-direction: column;
  }

  .btn {
    line-height: 1.5;
  }

  .header__email,
  .testimonials__img--wrapper {
    margin-bottom: 24px;
  }

  .nav__links {
    display: none;
  }

  .btn__menu {
    display: block;
  }

  /*img,
  .header__email,
  .testimonials__img--wrapper {
    width: 100%;
    max-width: 472px;
    height: auto;
    justify-content: center;
    align-items: center;
  }*/

  .header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    max-width: 512px;
    margin: 0 auto;
    text-align: center;
  }

  .header__email {
    width: 100%;
    max-width: 448px;
    height: 64px;
    position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }

  .header__email--input {
    border-radius: 500px;
    border: 2px solid rgb(229, 231, 235);
    padding: 20px 192px 20px 32px;
    color: #1a202c;
    font-size: 16px;
    font-weight: 500;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1;
    transition: border-color 300ms;
  }

  .header__email--btn {
    position: relative;
    z-index: 2;
    margin: 8px;
    margin-left: auto;
    height: calc(100% - 16px);
    border-radius: 500px;
    width: 160px;
    border: none;
    background-color: #6415ff;
    color: #fff;
    font-weight: 700;
    font-size: 16px;
    cursor: pointer;
  }

  .header__customers--title {
    font-size: 16px;
    letter-spacing: 0.05em;
  }

  .header__customers--img {
    padding-right: 0px;
    margin-bottom: 24px;
  }

  .header__img--wrapper {
    margin-top: 40px;
  }

  .section__title {
    font-size: 36px;
    text-align: center;
    line-height: 1.25;
    margin-top: 16px;
  }

  #features .section__title,
  #pricing .section__title {
    font-size: 48px;
  }

  .section__para {
    font-size: 14px;
  }

  .service {
    width: 100%;
  }

  .service__row {
    display: flex;
    align-items: flex-start;
    padding: 32px 24px;
    margin: 0px 120px;
  }

  .services {
    display: flex;
    width: 100%;
    max-width: 600px;
    justify-content: center;
    align-items: center;
    margin-top: 8px;
  }

  .service__title {
    letter-spacing: 0.025em;
    line-height: 1;
  }

  .service__para {
    margin-top: 8px;
    text-align: left;
    line-height: 2;
    max-width: 240px;
  }

  .service__img--wrapper {
    margin-top: 16px;
  }

  .service__description {
    padding-left: 16px;
    padding-bottom: 0;
    text-align: left;
  }

  .quality__grid {
    z-index: -3;
  }

  .quality__description {
    padding-right: 0;
  }

  #steps .row {
    display: flex;
    margin: auto 0;
  }

  #steps .section__tag {
    margin-top: 48px;
  }

  .steps__description {
    margin-right: 0;
    padding-left: 0;
    margin-left: 0;
  }

  .step__title {
    margin-top: 8px;
  }

  #steps .section__title {
    margin-bottom: 56px;
  }

  .steps__img--wrapper {
    width: 100%;
    max-width: 448px;
    margin-top: 100px;
    overflow: visible;
    padding-right: 0;
  }

  .steps__grid {
    height: 5rem;
    width: 5rem;
    bottom: -50px;
    padding-right: 0;
  }

  .step {
    display: block;
  }

  .values__description,
  .values__list,
  .testimonials__img--wrapper {
    margin-right: 0px;
  }

  .quality__description,
  .quality__img--wrapper,
  .steps__description,
  .steps__img--wrapper,
  .values__description,
  .testimonials__description,
  .value {
    width: auto;
    max-width: 504px;
  }

  .values__description {
    margin-top: 40px;
    padding-right: 0;
  }

  .value__para {
    width: 100%;
    max-width: 70%;
    text-wrap: pretty;
  }

  .value__title {
    flex: space-between;
  }

  .values__img--wrapper {
    width: 100%;
    max-width: 448px;
  }

  .value:first-child,
  .testimonial__profile {
    margin-bottom: 24px;
  }

  .plan {
    width: 100%;
    max-width: 368px;
  }

  .testimonial__profile {
    display: flex;
    align-items: center;
  }

  .step,
  .values__list,
  .value,
  .start_buttons {
    justify-content: center;
    align-items: center;
  }

  .start__title {
    font-size: 30px;
    margin-bottom: 16px;
  }

  .start__buttons {
    width: auto;
    margin-top: 24px;
  }

  .start__button {
    height: auto;
    padding: 16px 24px;
    font-size: 14px;
  }

  .footer__columns {
    width: 100%;
    justify-content: flex-start;
    display: flex;
    flex-wrap: wrap;
    padding-left: 40px;
  }

  .footer__column {
    width: calc(100% / 3);
  }

  .nav__logo--img,
  .footer__logo--img {
    margin-bottom: 0;
  }

  .footer__copyright {
    margin: 24px 0;
  }

  .footer__columns,
  .footer__socials {
    margin: 0;
  }

  #quality .section__para,
  #values .section__para,
  #testimonials .section__para {
    text-align: center;
  }
}
/* ... */

